--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -33,8 +33,22 @@
     height:80vh;
     align-items:center;
 }
-.landingMainContainer >div:nth-child(1){
+.landingMainContainer > div:nth-child(1){
     font-size: 2.2rem;
+}
+.landingMainContainer > div:nth-child(1) div[role='button']{
+    background:#4a90e2 ;
+    width: fit-content;
+    padding: 1rem;
+    border-radius: 20px;
+    margin-top: 1.9rem;
+
+}
+
+.landingMainContainer > div:nth-child(1) div[role='button'] a{
+    text-decoration: none;
+    color:white;
+    font-size: 1.7rem;
 }
 
 .landingMainContainer >div:nth-child(2) img{
